# docx-merger

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
app/: __init__.py  app_info.py  dialogs.py  logger.py  merger.py  platform_utils.py  settings_manager.py  ui.py  utils.py  worker.py
