[project]
name = "docx-merger"
version = "0.1.0"
description = "Кроссплатформенное desktop-приложение для объединения DOCX-файлов."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "PySide6>=6.8,<6.11",
    "python-docx>=1.2.0",
    "docxcompose>=2.0.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
